// TODO message结构的属性名请使用 驼峰小写字母开始
// TODO enum枚举的属性名请使用 驼峰大写字母开始
syntax = "proto3";
option go_package = "/pb";
package pb;





// 玩家基本信息
message Player {
  int64  playerId = 1;    // 玩家ID
  string playerName = 2;  // 玩家昵称
  int32  gender = 3;      // 角色性别
  int32  level = 4;       // 角色等级
  int64  createTime = 5;  // 创建时间
  int64  exp = 6;         // 经验值
}

// 查询角色响应
message PlayerSelectResponse {
  repeated Player list = 1;  // 玩家列表
}

//请求创建角色
message PlayerCreateRequest {
  string playerName = 1; // 玩家昵称
  int32  gender = 2; // 性别(0女,1男)
}

//创建角色回应
message PlayerCreateResponse {
  Player player = 1;  // 玩家信息
}

// 进入游戏响应
message PlayerEnterResponse {
  map<int32, int32> guideMaps = 2;  // 新手引导记录列表
}

//玩家属性变化
enum PlayerAttribute {
  AA_AttributeNone = 0; // 未使用
}
